--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
 <body>
 	<div id="container" class="col-lg-12">
 		<div class="col-lg-6">
-			<table>
+			<table id="itemTable" class="col-lg-12 table table-bordered">
 				<thead>
 					<tr>
 						<td>Asin</td>
